--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#Contact Us">Contact Us</a>
         </div>
     </nav>
-    <header>
+    <header class="header">
         <h1>A FAMILY PHOTOGRAPHY WEBSITE</h1>
     </header>
 
@@ -42,42 +42,42 @@
         </ul>
         <P>And many more,Here as some of the photos...</P>
     </section>
-    <section>
-        <div>
+    <section class="all-images">
+        <div class="images">
             <img src="./images/all of us .jpg" alt="picture of agila family">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/brothers.jpg" alt="picture of brothers">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/ai generated picture of me and my mother.jpg"
                 alt="an ai generated image of son and mother">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/grandmother.jpg" alt="image of grandmother">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/celebrating dad's ordination.jpg" alt="picture of people celebrating">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/extended family celebrate.jpg" alt="extended family celebrate traditional ceremony">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/uncle and cousins 2.jpg" alt="uncle and cousins">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/uncle working.jpg" alt="picture of uncle working">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/dad and group.jpg" alt="dad and group">
         </div>
-        <div>
+        <div class="images">
             <img src="./images/grandkids.jpg" alt="grandkids reunion">
         </div>
     </section>
 
 </body>
-<footer>
+<footer class="footer">
     <div>
         <h3>You can contact us via whatsapp at 0712345678</h3>
     </div>
