--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>ENJOY
         </P>
     </section>
-    <section>
+    <section class="para">
         <p>Here are some of the events we celebrated as a family:<br>
         </p>
         <ul>
