add paragraph to images

--- a/index.html
+++ b/index.html
@@ -45,34 +45,44 @@
     <section class="all-images">
         <div class="images">
             <img src="./images/all of us .jpg" alt="picture of agila family">
+            <P>Agila family picture</P>
         </div>
         <div class="images">
             <img src="./images/brothers.jpg" alt="picture of brothers">
+            <P>Me and my brothers</P>
         </div>
         <div class="images">
             <img src="./images/ai generated picture of me and my mother.jpg"
                 alt="an ai generated image of son and mother">
+                <P>Memory of me and my mom</P>
         </div>
         <div class="images">
             <img src="./images/grandmother.jpg" alt="image of grandmother">
+            <P>Grandmother Tabitha</P>
         </div>
         <div class="images">
             <img src="./images/celebrating dad's ordination.jpg" alt="picture of people celebrating">
+            <P>Celebrating milestone of my dad's pastoring journey</P>
         </div>
         <div class="images">
             <img src="./images/extended family celebrate.jpg" alt="extended family celebrate traditional ceremony">
+            <P>Whole family celebrating traditional event</P>
         </div>
         <div class="images">
             <img src="./images/uncle and cousins 2.jpg" alt="uncle and cousins">
+            <P>Uncles and cousins gathered in ceremony</P>
         </div>
         <div class="images">
             <img src="./images/uncle working.jpg" alt="picture of uncle working">
+            <P>Uncle organising an event</P>
         </div>
         <div class="images">
             <img src="./images/dad and group.jpg" alt="dad and group">
+            <P>Dad taking picture after a long day</P>
         </div>
         <div class="images">
             <img src="./images/grandkids.jpg" alt="grandkids reunion">
+            <P>Grandkids meet up</P>
         </div>
     </section>
 
