--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </P>
     </section>
     <section class="para">
-        <p>Here are some of the events we celebrated as a family:<br>
+        <p>Here are some of the events we celebrated as a family and hope you will too:<br>
         </p>
         <ul>
             <li>Birthdays</li>
